@@ -23,6 +23,7 @@ NEW: [features/improvements]
 +Middle click can close tabs in Shelf
 +Add custom highlighting for Issue Lists (from Torsten Mohr)
 +Report number of files searched when doing a Find in Files
++Improve performance of Find All.
 
 BUG FIXES:
 +Middle click closes the tab that was clicked on and not the active tab
